structmeta-tests/tests/compile_fail/struct_meta/option_bool.rs
#[derive(structmeta::StructMeta)]
struct Example {
    flag: Option<bool>,
}

fn main() {}
