structmeta-tests/tests/compile_fail/struct_meta/option_bool.stderr
error[E0308]: mismatched types
 --> $DIR/option_bool.rs:1:10
  |
1 | #[derive(structmeta::StructMeta)]
  |          ^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found struct `Span`
  |
  = note: expected enum `Option<bool>`
             found enum `Option<Span>`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
